# cafe-badminton-uploader

./: .env.template  .gitignore  CLAUDE.md  PLAN.md  README.md  auth_service.py  cleanup.py  config.py  constants.py  custom_exceptions.py  env.template  logger.py  main.py  main_temporal.py  pyproject.toml  pyrightconfig.json  schemas.py  stage_1.py  stage_2.py  stage_3.py  stage_4.py  thumbnail_enhancement.py  thumbnail_select.py  thumbnail_selector.py  torch_service.py  uploader.py  utils.py  video_overlay.py  video_prep.py
.cursor/plans/: temporal_workflow_migration_8586b33f.plan.md  web-based_thumbnail_selector_7b2993fa.plan.md
.cursor/rules/: python-style-rules.mdc
input/md_LeozNhovsSopzDen_Friendly Game/: metadata.json
input/md_NhozVinhvsKhanhzLeo/: metadata.json
input/ms_SopvsNho/: metadata.json
input/wd_TramzVyvsPhongzTu_Friendly Game/: metadata.json
input/xd_KhanhzVyvsZezTram/: metadata.json
openspec/changes/add-logo-watermark-to-videos/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-21-preflight-auth-check/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-auto-thumbnail-selection/: design.md  proposal.md  (+1 more)
openspec/specs/auto-thumbnail-scoring/: spec.md
openspec/specs/thumbnail-idempotency/: spec.md
openspec/specs/video-text-overlays/: spec.md
openspec/specs/youtube-auth-validation/: spec.md
temporal/: activities.py  client.py  worker.py  workflows.py
tests/: conftest.py  test_auth_service.py  test_auto_thumbnail.py  test_main.py  test_stage_1.py  test_thumbnail_renderer.py  test_video_overlay.py  test_video_prep.py
thumbnail_enhancement/: __init__.py  common.py  renderer.py  template_a.py  template_b.py
thumbnail_ranking/: __init__.py  clip_ranker.py  pipeline.py  quality_filter.py
thumbnail_selection/: __init__.py  clip_ranker.py  quality_filter.py  selector.py
web_selector/: __init__.py  server.py  test_thumbnail_selector.py
web_selector/templates/: __init__.py
(+17 files in other folders)
