[project]
name = "cafe-badminton-uploader"
version = "0.1.0"
description = "Upload videos to Cafe Badminton channel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
